# interoptopus

./: .gitattributes  .gitignore  .gitmodules  .release-plz.toml  .rustfmt.toml  .wakatime-project  CHANGELOG-NG.md  CLAUDE.md  Cargo.toml  FAQ.md  Justfile  LICENSE.md  README.md  TODO.md  UPGRADE_INSTRUCTIONS.md  WIRED.md  debug_test.rs  global.json  interoptopus.sln  minimal_test.rs  rust-toolchain.toml  rustc-ice-2025-03-15T19_22_38-1487220.txt  rustc-ice-2025-03-15T19_22_38-1491620.txt  rustc-ice-2025-03-15T19_22_38-1492456.txt  simple_test.rs  test_simple.rs  wire_vs_protobuf.csv  wire_vs_protobuf_hashmap_string.csv  wire_vs_protobuf_vec_string.csv
backends/c/: Cargo.toml  README.md
backends/c/src/: config.rs  converter.rs  docs.rs  lib.rs  testing.rs  writer.rs
backends/c/tests/: backend_c_ui.rs
backends/cpython/: Cargo.toml  README.md
backends/cpython/src/: config.rs  converter.rs  docs.rs  lib.rs  testing.rs  writer.rs
backends/cpython/tests/: backend_cpython_ui.rs
backends/cpython_cffi/: Cargo.toml  README.md
backends/cpython_cffi/src/: config.rs  converter.rs  lib.rs  writer.rs
backends/cpython_cffi/tests/: backend_cpython_cffi_ui.rs
backends/csharp/: Cargo.toml  README.md
backends/csharp/benches/: Benchmark.cs  Interop._global.cs  Interop.common.cs  Interop.cs  Util.cs  interop_benches.csproj
backends/csharp/src/: config.rs  converter.rs  docs.rs  lib.rs  testing.rs  writer.rs
backends/csharp/tests/: backend_csharp_ui.rs
benchmarks/csharp_protobuf/: .gitignore  Cargo.toml  Ffi.cs  ForCSharp.csproj  Interop.Ffi.cs  Interop.Wire.cs  Interop.cs  IpcBenchmarks.sln  Justfile  Program.cs  Protobuf.cs  README.md  Wire.cs  WireBenchy.sln  build.rs  ffi.rs  global.json  lib.rs
benchmarks/csharp_protobuf/WireBenchy/: Ffi.cs  Interop.Ffi.cs  Interop.Wire.cs  Interop.cs  Program.cs  Protobuf.cs  Wire.cs  WireBenchy.csproj
benchmarks/csharp_protobuf/ffi/: Cargo.toml  build.rs
benchmarks/csharp_protobuf/ffi_build/: Cargo.toml  build.rs
benchmarks/csharp_protobuf/interop/: Cargo.toml
benchmarks/csharp_protobuf/interopt_ffi/: Cargo.toml
benchmarks/csharp_protobuf/models/: Configuration.proto  Context.proto  Data.proto  Error.proto  Input.proto  Item.proto  Items.proto  Outputs.proto  Response.proto  Table.proto
benchmarks/csharp_protobuf/src/: ffi.rs  lib.rs  wire.rs
core/: Cargo.toml  README.md
core/src/: core.rs  error.rs  lib.rs  util.rs  writer.rs
core/src/lang/: c.rs  rust.rs
core/src/patterns/: api_entry.rs  api_guard.rs  array_ptr.rs  augmented_function.rs  callbacks.rs  mod.rs  option.rs  primitives.rs  result.rs  service.rs  slice.rs  string.rs  surrogates.rs
crates/backend_c/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/backend_c/benches/: CMakeLists.txt  main_bench.cpp
crates/backend_c/reference_project/: Cargo.toml
crates/backend_cpython/: CHANGELOG.md  Cargo.toml  README.md
crates/backend_csharp/: CHANGELOG.md  Cargo.toml  Foo.cs  Interop.cs  README.md  interoptopus_csharp.sln
crates/backend_csharp_ng/: Cargo.toml  Foo.cs  build.rs
crates/backend_csharp_rt/: Cargo.toml
crates/backend_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: core.rs  (+13 more)
crates/proc_macros/: CHANGELOG.md  Cargo.toml
crates/proc_macros_impl/: Cargo.toml  README.md
crates/proc_macros_old/: CHANGELOG.md  Cargo.toml  README.md
crates/reference_project/: Cargo.toml  build.rs  foo.json
examples/complex/: Cargo.toml
examples/hello_world/: Cargo.toml  Foo.cs  README.md
examples/real_project_layout/: Cargo.toml  README.md
interoptopus/: Cargo.toml  README.md
interoptopus/src/: core.rs  error.rs  generators.rs  lib.rs  testing.rs  util.rs  writer.rs
interoptopus_backend_c/: Cargo.toml  README.md
interoptopus_backend_c/src/: config.rs  converter.rs  lib.rs  writer.rs
interoptopus_backend_c/tests/: backend_c_ui.rs
interoptopus_backend_cpython_cffi/: Cargo.toml  README.md
interoptopus_backend_cpython_cffi/src/: converter.rs  lib.rs  writer.rs
interoptopus_backend_cpython_cffi/tests/: backend_cpython_cffi_ui.rs
interoptopus_backend_csharp/: Cargo.toml  README.md
interoptopus_backend_csharp/benches/: BENCHMARK_RESULTS.md  Benchmark.cs  Interop.common.cs  Interop.cs  Util.cs
interoptopus_backend_csharp/src/: InteroptopusHotReload.cs.template  config.rs  converter.rs  lib.rs  unity.rs  writer.rs
interoptopus_backend_csharp/tests/: backend_csharp_ui.rs
interoptopus_proc/: Cargo.toml  README.md
interoptopus_proc/src/: constants.rs  functions.rs  lib.rs  service.rs  types.rs  util.rs
interoptopus_reference_project/: Cargo.toml  README.md
interoptopus_reference_project/src/: constants.rs  functions.rs  lib.rs  types.rs
proc_macros/: Cargo.toml
proc_macros/src/: constants.rs  functions.rs  lib.rs  macros.rs  service.rs  surrogates.rs  types.rs  util.rs
reference_project/: Cargo.toml  out.rs
reference_project/src/: functions.rs  lib.rs  types.rs
tests/: Cargo.toml  asdasdasd.cs  bug_reproduction_output.cs
tests/src/: backend_c.rs  backend_cpython.rs  backend_csharp.rs  lib.rs
tests/tests/: _folders.rs  bug_reproduction.rs  c_docs.rs  c_docs_inline.h  c_docs_none.h  c_function_styles.rs  c_function_styles_forward.h  c_function_styles_typedefs.h  c_variant_style_variant_only.h  c_variant_style_with_name.h  c_variant_styles.rs  c_variant_styles_variant_only.h  c_variant_styles_with_name.h  cpython_basic.py  cpython_basic.rs  csharp_api_guard.cs  csharp_api_guard.rs  csharp_callback_with_enum.cs  csharp_callback_with_enum.rs  csharp_class_name.cs  csharp_class_name.rs  csharp_decorate_fn.cs  csharp_decorate_fn.rs  csharp_doc_hints.rs  csharp_doc_hints_off.cs  csharp_doc_hints_on.cs  csharp_error_customisation.cs  csharp_error_customisation.rs  csharp_interop_exception.rs  csharp_markdown.md  csharp_markdown.rs  csharp_overload_dotnet.cs  csharp_overload_dotnet.rs  csharp_overload_params.rs  csharp_overload_unity.cs  csharp_overload_unity.rs  csharp_overloads.rs  csharp_overloads_dotnet.cs  csharp_overloads_unity.cs  csharp_slice_type.cs  (+7 more)
(+1981 files in other folders)
