[workspace]
members = [
    "crates/*",
    "examples/hello_world",
    "examples/real_project_layout/*",
    "tests",
]
resolver = "2"

[workspace.package]
authors = ["Ralf Biedert <rb@xr.io>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ralfbiedert/interoptopus"
rust-version = "1.88"
version = "0.15.0-alpha.15"

[workspace.dependencies]
# Internal
interoptopus = { path = "crates/core", version = "=0.15.0-alpha.15" }
interoptopus_proc = { path = "crates/proc_macros", version = "=0.15.0-alpha.15" }
interoptopus_backend_c = { path = "crates/backend_c", version = "=0.15.0-alpha.15" }
interoptopus_backend_cpython = { path = "crates/backend_cpython", version = "=0.15.0-alpha.15" }
interoptopus_backend_csharp = { path = "crates/backend_csharp", version = "=0.15.0-alpha.15" }
interoptopus_backend_utils = { path = "crates/backend_utils", version = "=0.15.0-alpha.15" }
# Not published (no version dependency):
interoptopus_reference_project = { path = "crates/reference_project" }

# External
anyhow = "1.0.98"
darling = "0.20.11"
derive_builder = "0.20.2"
heck = "0.5.0"
include_dir = { version = "0.7.4", features = ["glob"] }
log = "0.4.27"
proc-macro2 = "1.0.95"
prettyplease = "0.2.35"
quote = "1.0.40"
serde = "1.0.219"
syn = "2.0.104"
tera = "1"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }     # We might want to disable this if it causes issues.

option_if_let_else = "allow"               # trips up on `darling`
match_same_arms = "allow"                  # too many
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_constructed_unit_structs = "allow"
