[workspace]
members = [
    "crates/backend_c",
    "crates/backend_cpython",
    "crates/backend_csharp",
    "crates/backend_utils",
    "crates/core",
    "crates/proc_macros",
    "crates/proc_macros_impl",
    "crates/reference_project",
    "examples/hello_world",
    "examples/real_project_layout/*",
]

resolver = "3"

[workspace.package]
authors = ["Ralf Biedert <rb@xr.io>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ralfbiedert/interoptopus"
rust-version = "1.94"
version = "0.16.0-alpha.5"

[workspace.dependencies]
# Internal
interoptopus = { path = "crates/core", version = "=0.16.0-alpha.5" }
interoptopus_proc = { path = "crates/proc_macros", version = "=0.16.0-alpha.5" }
interoptopus_proc_impl = { path = "crates/proc_macros_impl", version = "=0.16.0-alpha.5" }
interoptopus_c = { path = "crates/backend_c", version = "=0.16.0-alpha.5" }
interoptopus_cpython = { path = "crates/backend_cpython", version = "=0.16.0-alpha.5" }
interoptopus_csharp = { path = "crates/backend_csharp", version = "=0.16.0-alpha.5" }
interoptopus_backends = { path = "crates/backend_utils", version = "=0.16.0-alpha.5" }
# Not published (no version dependency):
reference_project = { path = "crates/reference_project" }


# External
anyhow = "1.0.98"
derive_builder = "0.20.2"
heck = "0.5.0"
include_dir = { version = "0.7.4", features = ["glob"] }
insta = "1.43.2"
netcorehost = { version = "0.20", features = ["nethost-download", "net9_0"] }
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = "1.0.219"
serde_json = "1.0.145"
syn = "2.0.104"
tar = "0.4.44"
tempfile = "3"
tera = "1"
tokio = "1.48.0"
trybuild = "1.0.111"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }     # We might want to disable this if it causes issues.

option_if_let_else = "allow"               # trips up on `darling`
match_same_arms = "allow"                  # too many
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_constructed_unit_structs = "allow"
unreadable_literal = "allow" # For the hex IDs
