[workspace]
members = [
    "crates/backend_c",
    "crates/backend_cpython",
    "crates/backend_csharp",
    "crates/backend_utils",
    "crates/core",
    "crates/proc_macros",
    "crates/proc_macros_impl",
    "crates/reference_project",
    "examples/hello_world",
    "examples/production_project/*",
]

resolver = "3"

[workspace.package]
authors = ["Ralf Biedert <rb@xr.io>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ralfbiedert/interoptopus"
homepage = "https://interoptopus.rs"
rust-version = "1.93"
version = "0.16.0-alpha.20"

[workspace.dependencies]
# Internal
interoptopus = { path = "crates/core", version = "=0.16.0-alpha.20", default-features = false }
interoptopus_proc = { path = "crates/proc_macros", version = "=0.16.0-alpha.20" }
interoptopus_proc_impl = { path = "crates/proc_macros_impl", version = "=0.16.0-alpha.20" }
interoptopus_c = { path = "crates/backend_c", version = "=0.16.0-alpha.20" }
interoptopus_cpython = { path = "crates/backend_cpython", version = "=0.16.0-alpha.20" }
interoptopus_csharp = { path = "crates/backend_csharp", version = "=0.16.0-alpha.20" }
interoptopus_backends = { path = "crates/backend_utils", version = "=0.16.0-alpha.20" }
# Not published (no version dependency):
reference_project = { path = "crates/reference_project" }


# External
anyhow = "1.0.98"
derive_builder = "0.20.2"
heck = "0.5.0"
include_dir = { version = "0.7.4", features = ["glob"] }
libloading = "0.9.0"
insta = "1.43.2"
netcorehost = { version = "0.20", default-features = false }
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = "1.0.219"
serde_json = "1.0.145"
syn = "2.0.104"
tar = "0.4.44"
tempfile = "3"
tera = "2.0.0-alpha.2"
tokio = "1.48.0"
trybuild = "1.0.111"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }     # We might want to disable this if it causes issues.

# Pragmatic Rust Guidelines
as_pointer_underscore = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
fn_to_numeric_cast_any = "deny"
map_err_ignore = "deny"
redundant_type_annotations = "deny"
implicit_clone = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"
mem_forget = "deny"

# Things we allow
option_if_let_else = "allow"               # trips up on `darling`
match_same_arms = "allow"                  # too many
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_constructed_unit_structs = "allow"
unreadable_literal = "allow" # For the hex IDs

