[package]
name = "interoptopus"
description = "The polyglot bindings generator for your library (C#, C, Python, ...). 🐙"
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version = "0.12.2"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus/"
repository = "https://github.com/ralfbiedert/interoptopus"

[features]
default = ["derive"]
derive = ["interoptopus_proc"]

[dependencies]
interoptopus_proc = { path = "../proc_macros", version = "0.12.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
log = { version = "0.4.14", optional = true }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../backends/csharp" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

