[package]
name = "interoptopus"
description = "FFI bindings to your favorite language. Composable. Explicit. Escape hatches included."
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version = "0.1.7"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus/"
repository = "https://github.com/ralfbiedert/interoptopus"

[features]
derive = ["interoptopus_proc"]
testing = ["cc"]

[dependencies]
interoptopus_proc = { path = "../interoptopus_proc", version = "0.1", optional = true }
cc = { version = "1.0.68", optional = true }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../interoptopus_backend_csharp", version = "0.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

