[package]
name = "interoptopus"
description = "Why export to only a single language when you can have them all? The polyglot binding generator for your library. 🐙"
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version = "0.1.15"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus/"
repository = "https://github.com/ralfbiedert/interoptopus"

[features]
derive = ["interoptopus_proc"]
testing = ["cc"]

[dependencies]
interoptopus_proc = { path = "../interoptopus_proc", version = "0.1", optional = true }
cc = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
interoptopus_backend_csharp = { path = "../interoptopus_backend_csharp", version = "0.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

