[package]
name = "interoptopus_backend_c"
description = "Generates C bindings."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.1.6"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus_backend_c/"
repository = "https://github.com/ralfbiedert/interoptopus"


[dependencies]
interoptopus = { path = "../interoptopus", version = "0.1" }

[dev-dependencies]
interoptopus = { path = "../interoptopus", version = "0.1", features = ["testing"] }
interoptopus_reference_project = { path = "../interoptopus_reference_project", version = "0.1" }
