[package]
name = "interoptopus_backend_cpython_cffi"
description = "Generates CPython CFFI bindings."
version = "0.2.0"
edition = "2018"
license = "MIT"
keywords = ["ffi", "code-generation", "bindings", "python", "cffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_cpython_cffi/"
repository = "https://github.com/ralfbiedert/interoptopus"

[dependencies]
interoptopus = { path = "../interoptopus", version = "0.2.0" }
interoptopus_backend_c = { path = "../interoptopus_backend_c", version = "0.2.0" }

[dev-dependencies]
interoptopus = { path = "../interoptopus", version = "0.1", features = ["testing"] }
interoptopus_reference_project = { path = "../interoptopus_reference_project", version = "0.1" }
