[package]
name = "interoptopus_backend_csharp"
description = "Generates C# bindings."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.1.13"
edition = "2018"
license = "MIT"
keywords = ["ffi", "code-generation", "bindings", "csharp", "dotnet"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_csharp/"
repository = "https://github.com/ralfbiedert/interoptopus"


[dependencies]
interoptopus = { path = "../interoptopus", version = "0.1" }

[dev-dependencies]
interoptopus = { path = "../interoptopus", version = "0.1", features = ["testing"] }
interoptopus_reference_project = { path = "../interoptopus_reference_project", version = "0.1" }
