[package]
name = "interoptopus_reference_project"
description = "A reference project for Interoptopus backends to test interop generation."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.1.5"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/interoptopus_reference_project/"
repository = "https://github.com/ralfbiedert/interoptopus"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../interoptopus", version = "0.1", features = ["derive"] }
