[package]
name = "interoptopus_proc"
description = "Macros to produce Interoptopus item info."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.13.8"
edition = "2018"
license = "MIT"
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_proc/"
repository = "https://github.com/ralfbiedert/interoptopus"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
syn = { version = "1.0.80", features = ["full"] }
quote = "1.0.10"
darling = "0.13.0"

[dev-dependencies]
interoptopus = { path = "../core" }
