[package]
name = "tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
interoptopus_backend_csharp.workspace = true
interoptopus_backend_c.workspace = true
interoptopus_backend_cpython.workspace = true
interoptopus_reference_project.workspace = true
interoptopus.workspace = true
interoptopus_backend_utils.workspace = true
anyhow = "1.0.98"
cc = "1.2.27"
tempfile = "3.20.0"

