[package]
name = "interoptopus_backend_c"
description = "Generates C bindings."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.14.25"
edition = "2021"
keywords = ["ffi", "code-generation", "bindings", "c", "headers"]
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
documentation = "https://docs.rs/interoptopus_backend_c/"
repository = "https://github.com/ralfbiedert/interoptopus"


[dependencies]
interoptopus = { path = "../../core", version = "0.14.0" }
cc = { version = "1.0.72", optional = true }
heck = "0.4.0"

[dev-dependencies]
interoptopus = { path = "../../core" }
interoptopus_reference_project = { path = "../../reference_project" }
