[package]
name = "interoptopus_backend_cpython"
description = "Generates CPython bindings."
version = "0.14.9"
edition = "2018"
license = "MIT"
keywords = ["ffi", "code-generation", "bindings", "python"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_cpython/"
repository = "https://github.com/ralfbiedert/interoptopus"

[dependencies]
interoptopus = { path = "../../core", version = "0.14.0" }

[dev-dependencies]
interoptopus = { path = "../../core" }
interoptopus_reference_project = { path = "../../reference_project" }
