[package]
name = "interoptopus_backend_cpython_cffi"
description = "Generates CPython CFFI bindings."
version = "0.10.1"
edition = "2018"
license = "MIT"
keywords = ["ffi", "code-generation", "bindings", "python", "cffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_cpython_cffi/"
repository = "https://github.com/ralfbiedert/interoptopus"

[dependencies]
interoptopus = { path = "../../core", version = "0.10.0" }
interoptopus_backend_c = { path = "../c", version = "0.10.0" }

[dev-dependencies]
interoptopus = { path = "../../core" }
interoptopus_reference_project = { path = "../../reference_project" }
