[package]
name = "interoptopus_backend_csharp"
description = "Generates C# bindings."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.13.14"
edition = "2018"
license = "MIT"
keywords = ["ffi", "code-generation", "bindings", "csharp", "dotnet"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_csharp/"
repository = "https://github.com/ralfbiedert/interoptopus"

[features]
unity = []

[dependencies]
interoptopus = { path = "../../core", version = "0.13.0" }
heck = "0.4.0"

[dev-dependencies]
interoptopus = { path = "../../core" }
interoptopus_reference_project = { path = "../../reference_project" }
tempdir = "0.3.7"