[package]
name = "interoptopus_backend_c"
description = "Generates C bindings."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.14.25"
edition = "2024"
keywords = ["ffi", "code-generation", "bindings", "c", "headers"]
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
documentation = "https://docs.rs/interoptopus_backend_c/"
repository = "https://github.com/ralfbiedert/interoptopus"

[lints]
workspace = true


[dependencies]
interoptopus = { path = "../core" }
heck = { workspace = true }
derive_builder = { workspace = true }
