[package]
name = "interoptopus_backend_c"
description = "Generates C bindings."
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["ffi", "code-generation", "bindings", "c", "headers"]
categories = ["api-bindings", "development-tools::ffi"]
license.workspace = true
documentation = "https://docs.rs/interoptopus_backend_c/"
repository.workspace = true

[lints]
workspace = true


[dependencies]
interoptopus = { path = "../core", version = "0.15.0-alpha.12" }
heck = { workspace = true }
derive_builder = { workspace = true }
