[package]
name = "interoptopus_c"
description = "C header generation for Interoptopus"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
interoptopus.workspace = true
interoptopus_backends.workspace = true
tera.workspace = true

[build-dependencies]
interoptopus_backends.workspace = true

[dev-dependencies]
insta.workspace = true
reference_project_c = { path = "reference_project" }

[lints]
workspace = true
