[package]
name = "interoptopus_backend_cpython"
description = "Generates CPython bindings."
authors.workspace = true
version = "0.15.0-alpha.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi", "code-generation", "bindings", "python"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_cpython/"
repository.workspace = true

[lints]
workspace = true

[dependencies]
interoptopus = { path = "../core", version = "0.15.0-alpha.9" }
derive_builder = { workspace = true }
tera.workspace = true
include_dir.workspace = true
indent.workspace = true
