[package]
name = "interoptopus_backend_cpython"
description = "Generates CPython bindings."
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords = ["ffi", "code-generation", "bindings", "python"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_backend_cpython/"
repository.workspace = true

[lints]
workspace = true

[dependencies]
interoptopus.workspace = true
interoptopus_backend_utils.workspace = true
derive_builder = { workspace = true }
tera.workspace = true
include_dir.workspace = true
