[package]
name = "interoptopus_csharp"
description = "The C# backend for Interoptopus."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
unstable-plugins = ["interoptopus/unstable-plugins", "dep:interoptopus_csharp_rt"]

[dependencies]
interoptopus.workspace = true
interoptopus_backends.workspace = true
interoptopus_csharp_rt = { workspace = true, optional = true }

[build-dependencies]
interoptopus_backends.workspace = true

[dev-dependencies]
interoptopus = { workspace = true, features = ["serde"] }
interoptopus_csharp = { path = ".", features = ["unstable-plugins"] }
reference_project.workspace = true
insta.workspace = true
tokio.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
# Don't use all-features — `dotnet`/`unstable-plugins` pull in netcorehost
# which requires nethost-download at build time and fails on docs.rs.
features = []
rustdoc-args = ["--cfg", "docsrs"]
