[package]
name = "interoptopus_csharp"
description = "The C# backend for Interoptopus."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true

[features]
unstable-extensions = []
unstable-plugins = ["interoptopus/unstable-plugins", "unstable-rt-dotnet", "unstable-rt-aot"]
unstable-rt-dotnet = ["interoptopus/unstable-plugins", "dep:netcorehost", "dep:tempfile"]
unstable-rt-dotnet-download = ["netcorehost/nethost-download"]
unstable-rt-aot = ["interoptopus/unstable-plugins", "dep:libloading"]

[dependencies]
interoptopus = { workspace = true }
interoptopus_backends.workspace = true
libloading = { workspace = true, optional = true }
netcorehost = { workspace = true, features = ["nethost", "net10_0"], optional = true }
tempfile = { workspace = true, optional = true }

[build-dependencies]
interoptopus_backends.workspace = true

[dev-dependencies]
interoptopus = { workspace = true, features = ["macros", "serde"] }
interoptopus_csharp = { path = ".", features = ["unstable-plugins", "unstable-rt-dotnet-download", "unstable-extensions"] }
reference_project.workspace = true
insta.workspace = true
tokio.workspace = true
memory-stats = "1.2.0"

[lints]
workspace = true

[package.metadata.docs.rs]
# Don't use all-features — `unstable-rt-dotnet-download` downloads the .NET runtime at build time
# and fails on docs.rs. Enable everything else explicitly instead.
features = ["unstable-plugins", "unstable-extensions"]
rustdoc-args = ["--cfg", "docsrs"]
