[package]
name = "backend_csharp_ng"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
interoptopus.workspace = true
interoptopus_backends.workspace = true
fundle.workspace = true
include_dir.workspace = true

[build-dependencies]
interoptopus_backends.workspace = true

[dev-dependencies]
interoptopus = { workspace = true, features = ["serde"] }
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
