[package]
name = "interoptopus"
description = "The polyglot bindings generator for your library (C#, C, Python, ...). 🐙"
authors.workspace = true
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation = "https://docs.rs/interoptopus/"
repository.workspace = true

[lints]
workspace = true

[features]
default = ["derive"]
derive = ["interoptopus_proc"]

[dependencies]
interoptopus_proc = { workspace = true, optional = true }
log = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rustc-hash = { version = "2.1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
