[package]
name = "interoptopus"
description = "The polyglot bindings generator for your library (C#, C, Python, ...). 🐙"
authors.workspace = true
keywords = ["ffi", "code-generation", "bindings"]
categories = ["api-bindings", "development-tools::ffi"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation = "https://docs.rs/interoptopus/"
repository.workspace = true

[lints]
workspace = true

[features]
default = ["macros"]
macros = ["dep:interoptopus_proc"]
unstable-plugins = []

[dependencies]
interoptopus_proc = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"], optional = true }

[dev-dependencies]
trybuild.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
