[package]
name = "interoptopus_proc"
description = "Macros to produce Interoptopus item info."
authors = ["Ralf Biedert <rb@xr.io>"]
version = "0.15.0-alpha.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
keywords = ["ffi"]
categories = ["api-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/interoptopus_proc/"
repository = "https://github.com/ralfbiedert/interoptopus"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2.workspace = true
prettyplease.workspace = true
syn = { workspace = true, features = ["full"] }
quote.workspace = true
darling.workspace = true

[dev-dependencies]
interoptopus = { path = "../core", version = "0.15.0-alpha.0" }
